# health-dash-be

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.dev  Dockerfile.vite  Dockerfile.web  LICENSE.md  Makefile  README.md  docker-compose.yml  docker_startup.sh  fly.toml  manage.py  package.json  pegasus-config.yaml  pyproject.toml  vite.config.ts
.cursor/: mcp.json
.cursor/rules/: architecture.mdc  commands.mdc  django-templates.mdc  javascript-guidelines.mdc  python-guidelines.mdc
api-client/: runtime.ts
api-client/.openapi-generator/: FILES
apps/ai/: agents.py  handlers.py  permissions.py  types.py
apps/api/: appointment_urls.py  appointment_views.py  auth_urls.py  auth_views.py  billing_urls.py  billing_views.py  clinic_urls.py  clinic_views.py  consultation_urls.py  consultation_views.py  lab_order_urls.py  lab_order_views.py  medicine_urls.py  medicine_views.py  mixins.py  patient_urls.py  patient_views.py  permissions.py  policy_urls.py  prescription_urls.py  prescription_views.py  role_urls.py  role_views.py  service_urls.py  service_views.py  staff_urls.py  staff_views.py
apps/appointments/: admin.py  tests.py
apps/billing/: admin.py  tests.py
apps/chat/: admin.py  api_url_helpers.py  models.py  prompts.py  serializers.py  sessions.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/clinic/: admin.py  apps.py  models.py  serializers.py  tests.py
apps/consultations/: admin.py  apps.py  tests.py
apps/lab_orders/: admin.py  apps.py  tests.py
apps/medicines/: admin.py  tests.py
apps/patients/: admin.py  tests.py
apps/prescriptions/: admin.py  tests.py
dash_hospital_mngt/: asgi.py  celery.py  settings.py  settings_production.py  urls.py  wsgi.py
(+117 files in other folders)
